2005-04-08  Andras Varga

	* cnednetworkbuilder.cc: background display strings were not set
	properly

2005-03-31  ------ omnetpp-3.1 released ------

2005-03-19  Andras Varga

	* cnednetworkbuilder.cc: didn't handle connection display strings

2005-01-06  Andras Varga

	* cnednetworkbuilder.cc/.h: implemented "connections nocheck"

2004-12-29  ------ omnetpp-3.0 released ------

2004-12-10  Andras Varga

	* cnednetworkbuilder.cc/.h: several fixes in expression evaluation code

2004-11-23  ------ omnetpp-3.0b1 released ------

2004-11-03  ------ omnetpp-3.0a9 released ------

2004-10-04  ------ omnetpp-3.0a8 released ------

2004-09-24  ------ omnetpp-3.0a7 released ------

2004-07-22  ------ omnetpp-3.0a6 released ------

2004-06-24

	* loadned.cc: added support for "xml" NED parameter type

2004-06-07  ------ omnetpp-3.0a5 released ------

2004-05-15  ------ omnetpp-3.0a4 released ------

2004-03-22  ------ omnetpp-3.0a3 released ------

2004-03-03  ------ omnetpp-3.0a2 released ------

2004-02-10  Andras Varga

	* cnednetworkbuilder.cc: support for multiple conditional gatesizes and
	parameters sections; fixes in expr handling

2004-02-09  Andras Varga

	* loading of simple module interfaces from NED files made possible

	* fixed bug in "sizeof" handling

2004-02-04  ------ omnetpp-3.0pre1 released ------

2003-11-09  Andras Varga

	* initial checkin of dynamic network building code.